--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,4 +15,4 @@ html(lang='en')
     title
   body
     script(src=(htmlWebpackPlugin.options.production ? '../../resources/assets/external/requirejs' : 'https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.2') + '/require.js')
-    script(src=htmlWebpackPlugin.files.chunks['asset/js/app.js'].entry defer='')
+    script(src=htmlWebpackPlugin.files.chunks[htmlWebpackPlugin.options.js].entry defer)
