--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+$web-font-path: '~source-sans-pro/source-sans-pro.css';
 
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/variables';
 @import '~bootswatch/lumen/variables';
