--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,5 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-$web-font-path: '~source-sans-pro/source-sans-pro.css';
+$bootstrap-sass-asset-helper: true;
+$web-font-path: './_font.scss';
 
 @import '~bootswatch/lumen/variables';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap/variables';
