--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,5 +7,5 @@ block menu
 block body
   .container
     .row
-      #QV01.col-xs-12.col-md-6.qvplaceholder [Stick stuff here]
+      #QV01.col-xs-12.col-md-6.qvplaceholder [Stick stuff here] #[i.glyphicon.glyphicon-asterisk]
       #QV02.col-xs-12.col-md-6.qvplaceholder [Stick stuff here]
